force-app/main/default/objects/OpenAI_Setting__mdt/OpenAI_Setting__mdt.object-meta.xml
<CustomObject>
    <label>OpenAI Setting</label>
    <pluralLabel>OpenAI Settings</pluralLabel>
</CustomObject>