force-app/main/default/objects/OpenAI_Setting__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <inlineHelpText>The endpoint to interact with</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>