force-app/main/default/objects/OpenAI_Setting__mdt/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <inlineHelpText>The model to use for the endpoint</inlineHelpText>
    <label>model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>